see #11924 - add more `--add-opens` arguments for unit tests until https://github.com/jqno/equalsverifier/issues/169 is solved
git-svn-id: http://josm.openstreetmap.de/svn/trunk@12230 0c6e7542-c601-0410-84e7-c038aed88b3b